# weed-removal-irl

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
log/: latest_build
meercat/meercat-rpi/: .gitignore  README.md  app.toml  clean_bufs.sh  deploy.py  dev_notes.txt  gen_bufs.sh
wombat/data-collection/: collect_motor_speeds.py
wombat/diffDrive/: inverse_kinematics_controller.py
wombat/driver-tests/: requirements.txt  test_liv3f.py  test_pca9685.py  test_speed_control_stm32.py
wombat/ros2_ws/: README.md  (+2 more)
wombat/ros2_ws/src/wombat_nav/: odomBroadcaster.py  odomListener.py  package.xml  setup.cfg  setup.py
wombat/ros2_ws/src/wombat_nav/config/: main_waypoints.yaml
wombat/ros2_ws/src/wombat_nav/wombat_nav/: branch_waypoint_publisher.py  branch_waypoint_publisher_old.py  controller_gains.py  differential_drive.py  error_angle.py  fake_odometry.py  inverse_kinematics_controller.py  main_action_server.py  main_waypoint_publisher.py  main_waypoints.yaml  object_centering.py  odom_listener.py  test1_waypoints.py  test2_waypoints.py  turn_action_server.py  vision_detection.py  vision_detection_calibrate_color.py  waypoint_action_server.py  waypoint_publisher.py  weed_waypoint_server.py  weeds_scan_action_server.py  weeds_spray_action_server.py  xbox_controller_node.py  yolo_vision_detection.py
wombat/ros2_ws/src/wombat_nav/wombat_nav/archive/: main_waypoint_publisher.py  test2_waypoints.py  waypoint_publisher.py
wombat/ros2_ws/src/wombat_nav/wombat_nav/utilities/: error_angle.py
wombat/ros2_ws/src/wombat_nav/wombat_srv/: DetectObjects.srv
(+148 files in other folders)
